package com.example.demo.DTO;

public class AmministratoreDTO extends UtenteDTO{

	public AmministratoreDTO() {
        super();
        this.setRuolo("AMMINISTRATORE");
    }
}
