@startuml DietiEstates2_DTO

skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor #333
  ArrowColor #555
}

package "DTO" #LightCyan {

  abstract class UtenteDTO {
    - idUtente : UUID
    - nome : String
    - cognome : String
    - email : String
    - ruolo : String
  }

  class AgenteDTO {
    - idAgenzia : Integer
    - nomeAgenzia : String
  }

  class ClienteDTO {
  }

  class GestoreDTO {
    - idAgenzia : Integer
    - nomeAgenzia : String
  }

  class AmministratoreDTO {
  }

  class SupportoAmministratoreDTO {
  }

  class AgenziaDTO {
    - idAgenzia : Integer
    - nomeAgenzia : String
    - partitaIva : String
    - numeroAgenti : int
    - numeroImmobili : int
  }

  class ImmobileDTO {
    - idImmobile : Integer
    - titolo : String
    - citta : String
    - provincia : String
    - indirizzo : String
    - prezzo : double
    - tipoImmobile : String
    - tipoContratto : String
    - tipoAffitto : String
    - superficie : double
    - stato : String
    - climatizzazione : boolean
    - boxAuto : boolean
    - terrazzo : boolean
    - piano : Integer
    - ascensore : boolean
    - portineria : boolean
    - giardino : boolean
    - piscina : boolean
    - superficieGiardino : double
    - latitudine : Double
    - longitudine : Double
    - vicinoScuole : boolean
    - vicinoParchi : boolean
    - vicinoTrasporti : boolean
    - idAgenzia : Integer
    - nomeAgenzia : String
    - idAgente : UUID
    - nomeAgente : String
  }

  class ImmobileImmagineDTO {
    - idImmagine : Integer
    - idImmobile : Integer
    - urlImmagine : String
    - isCopertina : boolean
  }

  class OffertaDTO {
    - idOfferta : Integer
    - prezzoOfferto : double
    - prezzoOriginale : double
    - stato : String
    - offertaEsterna : boolean
    - dataCreazione : LocalDateTime
    - prezzoControfferta : Double
    - nomeClienteEsterno : String
    - contattoClienteEsterno : String
    - idCliente : UUID
    - nomeCognomeCliente : String
    - idImmobile : Integer
    - titoloImmobile : String
    - immagineImmobile : String
  }

  class StoricoOffertaDTO {
    - idLog : Integer
    - idOfferta : Integer
    - statoPrecedente : String
    - nuovoStato : String
    - prezzoScambiato : Double
    - nota : String
    - dataAzione : LocalDateTime
    - autoreAzione : UUID
  }

  class RegistrazioneClienteDTO {
    - datiProfilo : ClienteDTO
    - password : String
  }

  class RichiestaLoginDTO {
    - email : String
    - password : String
  }

  class RispostaLoginDTO {
    - idToken : String
    - accessToken : String
    - refreshToken : String
  }

  class CambiaPasswordDTO {
    - vecchiaPassword : String
    - nuovaPassword : String
  }

  class CreazioneStaffDTO {
    - datiProfilo : UtenteDTO
  }

  ' Ereditarietà
  UtenteDTO <|-- AgenteDTO
  UtenteDTO <|-- ClienteDTO
  UtenteDTO <|-- GestoreDTO
  UtenteDTO <|-- AmministratoreDTO
  UtenteDTO <|-- SupportoAmministratoreDTO

  ' Assocazioni
  RegistrazioneClienteDTO -- ClienteDTO
  CreazioneStaffDTO -- UtenteDTO
}

@enduml
